lesson23/diagnostics.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: diagnostic-pod
  namespace: dev
spec:
  serviceAccountName: diagnostic-sa
  containers:
  - name: diagnostic-container
    image: bitnami/kubectl:latest
    command: ["/bin/bash", "/config/script.sh"]
    volumeMounts:
    - name: config-volume
      mountPath: /config
  volumes:
  - name: config-volume
    configMap:
      name: diagnostic-script
